# market-equilibrium

./: .gitignore  LICENSE  README.md  agent.py  environment.yaml  experiment.py  llm_setup.py  pyproject.toml  readme.md  results_analysis.ipynb  results_analysis.py  results_analysis_single_sim.ipynb  utils.py
configs/: exp1.yaml  exp1_gemini.yaml  exp2.yaml  exp3.yaml  test.yaml  test_gemini.yaml
