[project]
name = "market-equilibrium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel==6.29.5",
    "matplotlib==3.10.3",
    "numpy==2.3.2",
    "openai==1.97.1",
    "pandas==2.3.1",
    "pyyaml==6.0.3",
    "seaborn==0.13.2",
]
