[project]
name = "market-equilibrium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel==6.29.5",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-openai>=0.3.29",
    "matplotlib==3.10.7",
    "numpy==2.3.5",
    "openai>=2.9.0",
    "pandas==2.3.3",
    "pyyaml==6.0.3",
    "seaborn==0.13.2",
]
